--- a/res/menu/image_advanced_search.xml
+++ b/res/menu/image_advanced_search.xml
@@ -3,8 +3,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-		android:showAsAction="ifRoom"
-         android:onClick="onAdvanzed"/>
+        android:showAsAction="never"
+        android:title="@string/action_settings"/>
 
 </menu>
