--- a/res/layout/activity_search.xml
+++ b/res/layout/activity_search.xml
@@ -36,4 +36,13 @@
         android:numColumns="3" >
     </GridView>
 
+    <Button
+        android:id="@+id/btLoadMore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="onLoadMore"
+        android:text="@string/LoadMore" />
+
 </RelativeLayout>
